--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,7 +4,7 @@
 <li><a href="#1introduction">Introduction</a></li>
 <li><a href="#2-changes-to-this-privacy-policy">Changes to Privacy Policy</a></li>
 <li><a href="#3what-information-we-collect">What information we collect</a></li>
-<li><a href="#4-childrens-use-of-the-platforms">Childrenâ€™s use of our apps</a></li>
+<li><a href="#4-childrens-use-of-the-platforms">Children&#39;s use of our apps</a></li>
 <li><a href="#5-links">Links</a></li>
 <li><a href="#6-third-party-websites-and-services">3rd party sites </a></li>
 <li><a href="#7-contact-us">Contact details</a></li>
