wip: website design created from template

--- a/games.html
+++ b/games.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>SteveyMcGuy</title>
+	<title>SteveyMcGuy - Games</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -13,11 +12,11 @@
 				<a href="index.html">SteveyMcGuy</a>
 			</div>
 			<ul id="navigation">
-				<li class="active">
+				<li>
 					<a href="index.html">Home</a>
 				</li>
-				<li>
-					<a href="games.html">Games</a>
+				<li class="active">
+					<a href="Games.html">Games</a>
 				</li>
 				<li>
 					<a href="privacy-policy.html">Privacy Policy</a>
@@ -32,29 +31,28 @@
 		</div>
 	</div>
 	<div id="contents">
-		<div id="tagline" class="clearfix">
-			<h1> WIP Website </h1>
-			<h1>Games that are Epic</h1>
+		<div class="features">
+			<h1>WIP Website</h1>
+			<h1>Games</h1>
+			<p>
+				Here's a list of all the games published by SteveyMcGuy
+			</p>
 			<div>
+				<img src="images/stacker.png" alt="Img">
+				<h2>Stacker</h2>
 				<p>
-					I could put lorem ipsum here but thats not as cool also wtf firefox doin' man
-				</p>
-				<p>
-					doin' your mom doin' doin' your mom doin' your mom
-				</p>
-				<p>
-					[bee movie script.txt]
+					An epic mobile game about stacking pieces into a tower, or knocking them down to the ground.
 				</p>
 			</div>
 			<div>
+				<img src="images/box-of-icons.png" alt="Img">
+				<h2>More Coming Soon.</h2>
 				<p>
-					Wanna play some epic games?
+					More games coming soon to both mobile and desktop platforms!
 				</p>
+				<h2></h2>
 				<p>
-					Find some epic games <a href="games.html"> here! </a>
-				</p>
-				<p>
-					3rd line
+					
 				</p>
 			</div>
 		</div>
@@ -65,7 +63,7 @@
 				ball of plural
 			</div>
 			<p>
-				© SteveyMcGuy 2021
+				© 2021 SteveyMcGuy. All Rights Reserved.
 			</p>
 		</div>
 	</div>
