--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
 					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="features.html">Features</a>
+					<a href="games.html">Games</a>
 				</li>
 				<li>
-					<a href="news.html">News</a>
+					<a href="privacy-policy.html">Privacy Policy</a>
 				</li>
 				<li>
 					<a href="about.html">About</a>
