--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -55,7 +55,7 @@
 			</p>
 			<h2 id="what-information-we-collect">3. What information we collect</h2>
 			<p>
-				SteveyMcGuy is a small home based app provider that does not harvest information about its users. We do not collect any personal information about you. â€œPersonal Informationâ€ means personally identifiable information, such as your physical address, calendar entries, contact entries, files, photos, etc.
+				SteveyMcGuy is a small home based app provider that does not harvest information about its users. We do not collect any personal information about you. &#39;Personal Information&#39; means personally identifiable information, such as your physical address, calendar entries, contact entries, files, photos, etc.
 				We do not have any registration system, we do not collect your email address, we have no access to your photos video, audio, physical location or IP address. <br><br>
 				SteveyMcGuy does not use or share information about its users as no information is collected.
 				<br>
