fixup website for portfolio

--- a/about.html
+++ b/about.html
@@ -1,68 +1,84 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>SteveyMcGuy - About</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-<body>
-	<div id="header">
-		<div>
-			<div class="logo">
-				<a href="index.html">SteveyMcGuy</a>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>SteveyMcGuy - About</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css">
+	</head>
+	<body>
+		<div id="header">
+			<div>
+				<div class="logo">
+					<a href="index.html">SteveyMcGuy</a>
+				</div>
+				<ul id="navigation">
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="games.html">Games</a>
+					</li>
+					<li>
+						<a href="privacy-policy.html">Privacy Policy</a>
+					</li>
+					<li class="active">
+						<a href="about.html">About</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
 			</div>
-			<ul id="navigation">
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="games.html">Games</a>
-				</li>
-				<li>
-					<a href="privacy-policy.html">Privacy Policy</a>
-				</li>
-				<li class="active">
-					<a href="about.html">About</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
 		</div>
-	</div>
-	<div id="contents">
-		<div id="about">
-			<h1>WIP Website</h1>
-			<h1>About SteveyMcGuy</h1>
-			<h2>Who are we?</h2>
-			<p>
-				SteveyMcGuy is a passionate group of people that love games and love making games. We hope to challenge and transform the market with better, higher quality games for everyone.
-			</p>
-			<h2>What do we do?</h2>
-			<p>
-				We make games.
-				Small indie games for now, but with a passion.
-				We don't settle for basic run-of-the-mill games and saturate them with ads or charge exorbitant prices.
-				We enjoy making special hand crafted games that are enjoyable to play.
-			</p>
-			<h3>You're still reading</h3>
-			<p>
-				We're glad you are someone who enjoys reading About pages, Thank You 😣
-				You're the kind of person who takes time to understand what people are about, we respect that.
-				<h6>Idk why you're still reading its pretty obvious this is just meaningless fluff <br>
-				sub to pewds</h6>
-			</p>
-		</div>
-	</div>
-	<div id="footer">
-		<div class="clearfix">
-			<div id="connect">
-				
+		<div id="contents">
+			<div id="about">
+				<h1>About SteveyMcGuy</h1>
+				<h2>Who am I?</h2>
+				<p>
+					SteveyMcGuy (aka Joshua Wedgwood, or Bobscorn) is a small, passionate indie game developer, and programmer.
+				</p>
+				<h2>What do I do?</h2>
+				<p>
+					Currently making games. <br>
+					Small indie games for now, but with a passion. <br>
+					I don't like settling for copy-paste games, with exorbitant prices or smothered by ads. <br>
+					We enjoy making special hand crafted games that are enjoyable to play.
+				</p>
+				<h2>What have I done?</h2>
+				<p>
+					I have spent the last few years doing a variety of programming. <br>
+					In chronological order, this includes:
+					<ul>
+						<li>My own C++ Game Engine</li>
+						<li><a href="https://steveymcguy.itch.io/totally-not-trump">A light-hearted Trump co-op game - Attack on Trumpocracy</a></li>
+						<li><a href="https://github.com/Doublecouponday/vectorizer">A PNG/JPEG -> SVG image processor - Vectorizer</a></li>
+						<li><a href="https://play.google.com/store/apps/details?id=com.BigBallsCo.Stacker">A 3D physics stacking Mobile Game - Piece Stacker 3D</a></li>
+						<li><a href="https://github.com/Bobscorn/ptop">A Peer-to-peer UDP File Transfer Tool - PTOP</a></li>
+					</ul>
+					Previously I've spent 2.5 years making my own C++ game engine using SDL2, OpenGL, OpenAL and a few other libraries trying to do myself what all these triple AAA games were doing. <br>
+					I was able to make a prototype game with this custom game engine, but not a completed product. <br>
+					<br>
+					I then tried out Unity and made a few games, namely Super Farm (my first game, likely to never see the light of day), Attack On Trumpocracy, and Piece Stacker 3D (aka Stacker). <br>
+					<br>
+					Otherwise I've been honing my general programming skills with various projects like <a href="https://github.com/Bobscorn/ptop">PTOP - a peer to peer file transfer program</a>, and <a href="https://github.com/Doublecouponday/Vectorizer">Vectorizer - a PNG/JPG -> SVG image processor</a>
+				</p>
+				<h3>That's about it</h3>
+				<p>
+					If you want some more personal information, <br>
+					Well I love video games, especially with friends. <br>
+				</p>
 			</div>
-			<p>
-				© 2021 SteveyMcGuy. All Rights Reserved.
-			</p>
 		</div>
-	</div>
-</body>
+		<div id="footer">
+			<div class="clearfix">
+				<div id="connect">
+					
+				</div>
+				<p>
+					© 2021 SteveyMcGuy. All Rights Reserved.
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
