--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,55 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Contact - Zerotype Website Template</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-<body>
-	<div id="header">
-		<div>
-			<div class="logo">
-				<a href="index.html">SteveyMcGuy</a>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>SteveyMcGuy - Contact</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css">
+	</head>
+	<body>
+		<div id="header">
+			<div>
+				<div class="logo">
+					<a href="index.html">SteveyMcGuy</a>
+				</div>
+				<ul id="navigation">
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>
+						<a href="games.html">Games</a>
+					</li>
+					<li>
+						<a href="privacy-policy.html">Privacy Policy</a>
+					</li>
+					<li>
+						<a href="about.html">About</a>
+					</li>
+					<li class="active">
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
 			</div>
-			<ul id="navigation">
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="games.html">Games</a>
-				</li>
-				<li>
-					<a href="privacy-policy.html">Privacy Policy</a>
-				</li>
-				<li>
-					<a href="about.html">About</a>
-				</li>
-				<li class="active">
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
 		</div>
-	</div>
-	<div id="contents">
-		<div id="about">
-			<h1>WIP Website</h1>
-			<h1>Contact SteveyMcGuy</h1>
-			<p>
-				By Email: supsteveymcguy@gmail.com
-			</p>
-		</div>
-	</div>
-	<div id="footer">
-		<div class="clearfix">
-			<div id="connect">
-				
+		<div id="contents">
+			<div id="about">
+				<h1>Contact SteveyMcGuy</h1>
+				<p>
+					By Email: supsteveymcguy@gmail.com<br>
+					On Github: <a href="https://github.com/SteveyMcGuy">SteveyMcGuy</a><br>
+					Also on Github: <a href="https://github.com/Bobscorn">Bobscorn</a><br>
+				</p>
 			</div>
-			<p>
-				© 2021 SteveyMcGuy. All Rights Reserved.
-			</p>
 		</div>
-	</div>
-</body>
+		<div id="footer">
+			<div class="clearfix">
+				<div id="connect">
+					
+				</div>
+				<p>
+					© 2021 SteveyMcGuy. All Rights Reserved.
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
