--- a/games.html
+++ b/games.html
@@ -1,71 +1,82 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>SteveyMcGuy - Games</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
-<body>
-	<div id="header">
-		<div>
-			<div class="logo">
-				<a href="index.html">SteveyMcGuy</a>
-			</div>
-			<ul id="navigation">
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<li class="active">
-					<a href="Games.html">Games</a>
-				</li>
-				<li>
-					<a href="privacy-policy.html">Privacy Policy</a>
-				</li>
-				<li>
-					<a href="about.html">About</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div id="contents">
-		<div class="features">
-			<h1>WIP Website</h1>
-			<h1>Games</h1>
-			<p>
-				Here's a list of all the games published by SteveyMcGuy
-			</p>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>SteveyMcGuy - Games</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css">
+	</head>
+	<body>
+		<div id="header">
 			<div>
-				<img src="images/stacker.png" alt="Img">
-				<h2>Stacker</h2>
-				<p>
-					An epic mobile game about stacking pieces into a tower, or knocking them down to the ground.
-				</p>
+				<div class="logo">
+					<a href="index.html">SteveyMcGuy</a>
+				</div>
+				<ul id="navigation">
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li class="active">
+						<a href="Games.html">Games</a>
+					</li>
+					<li>
+						<a href="privacy-policy.html">Privacy Policy</a>
+					</li>
+					<li>
+						<a href="about.html">About</a>
+					</li>
+					<li>
+						<a href="contact.html">Contact</a>
+					</li>
+				</ul>
 			</div>
-			<div>
-				<img src="images/box-of-icons.png" alt="Img">
-				<h2>More Coming Soon.</h2>
+		</div>
+		<div id="contents">
+			<div class="features">
+				<h1>Games</h1>
 				<p>
-					More games coming soon to both mobile and desktop platforms!
+					Here's a list of all the games published by SteveyMcGuy
 				</p>
-				<h2></h2>
+				<div>
+					<a class="gamelink" href="https://play.google.com/store/apps/details?id=com.BigBallsCo.Stacker">
+						<img class="gameicon" src="images/stacker.png" alt="Stacker game icon">
+						<h2>Stacker</h2>
+						<p>
+							An epic mobile game about stacking pieces into a tower, or knocking them down to the ground.
+						</p>
+					</a>
+				</div>
+				<div>
+					<a class="gamelink" href="https://steveymcguy.itch.io/totally-not-trump">
+						<img class="gameicon" src="images/trumpocracy.jpg" alt="Trumpocracy game icon">
+						<h2>Attack on Trumpocracy</h2>
+						<p>
+							An epic desktop game about preventing an overly assertive politician from destroying the democracy!
+						</p>
+					</a>
+				</div>
+				<div>
+					<img class="gameicon" src="images/box-of-icons.png" alt="Box of icons">
+					<h2>More Coming Soon.</h2>
+					<p>
+						More games coming soon to both mobile and desktop platforms!
+					</p>
+					<h2></h2>
+					<p>
+						
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="footer">
+			<div class="clearfix">
+				<div id="connect">
+					ball of plural
+				</div>
 				<p>
-					
+					© 2021 SteveyMcGuy. All Rights Reserved.
 				</p>
 			</div>
 		</div>
-	</div>
-	<div id="footer">
-		<div class="clearfix">
-			<div id="connect">
-				ball of plural
-			</div>
-			<p>
-				© 2021 SteveyMcGuy. All Rights Reserved.
-			</p>
-		</div>
-	</div>
-</body>
+	</body>
 </html>
